Fixed product card text spacing issue.

--- a/src/scss/user/_product-card.scss
+++ b/src/scss/user/_product-card.scss
@@ -6,4 +6,8 @@
     position: absolute;
     top: 0;
     left: 0;
+    h2, h3 {
+        flex-basis: auto !important;
+    }
+    
 }
